--- a/PitchPerfect/Main.storyboard
+++ b/PitchPerfect/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5qO-2i-D9w">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5qO-2i-D9w">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <!--Record Sounds View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="projectOne" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,7 +23,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QJS-HW-4be">
                                         <rect key="frame" x="0.0" y="0.0" width="155" height="155"/>
-                                        <state key="normal" image="RecordButton"/>
+                                        <state key="normal" image="Record"/>
                                         <connections>
                                             <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Q2X-Zf-mgm"/>
                                         </connections>
@@ -59,7 +59,7 @@
                     <navigationItem key="navigationItem" id="JWe-S4-zBs"/>
                     <connections>
                         <outlet property="recordButton" destination="QJS-HW-4be" id="dzv-s0-P3c"/>
-                        <outlet property="recordingLabel" destination="v4p-AG-d5x" id="HrA-yW-Mes"/>
+                        <outlet property="recordingLabel" destination="v4p-AG-d5x" id="Fdw-RY-rJj"/>
                         <outlet property="stopRecordingbutton" destination="7dB-s3-l9n" id="m7n-ah-z3I"/>
                         <segue destination="bIW-re-qh9" kind="show" identifier="stopRecording" id="q1y-5d-EpI"/>
                     </connections>
@@ -71,7 +71,7 @@
         <!--Play Sounds View Controller-->
         <scene sceneID="rN2-JV-zhb">
             <objects>
-                <viewController id="bIW-re-qh9" customClass="PlaySoundsViewController" customModule="projectOne" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="bIW-re-qh9" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sDe-60-4i6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -199,7 +199,7 @@
         <image name="Fast" width="90" height="90"/>
         <image name="HighPitch" width="90" height="90"/>
         <image name="LowPitch" width="90" height="90"/>
-        <image name="RecordButton" width="155" height="155"/>
+        <image name="Record" width="155" height="155"/>
         <image name="Reverb" width="90" height="90"/>
         <image name="Slow" width="90" height="90"/>
         <image name="Stop" width="155" height="155"/>
